02-12-2006 Qball <Qball@sarine.nl>
	* glade/*.glade: Replace cms.qballcow.nl sarine.nl
	* glade/*.glade: Replace qballcow.nl with sarine.nl
	* po/pl.po:	Update polish translation

29-11-2006 Qball <Qball@qballcow.nl
	* Changelog: Start using it again. (yeah I know; about time).
	* src/config1.c: Change printf's to debug_printf's (and include
	libmpd/debug_printf.h to make this posible.
	* src/playlist3-metadata.c: Use Replace instead of "play", to make it
	more consistent with the rest of gmpc.
	* src/metadata.[c|h]: Add (void) to the void meta_data_destroy()
	function argument defenition.





19-12-2005 Qball <Qball@qballcow.nl>
	* Changed configure script to check for gtk/glib seperately,
	this to "fix" the annoyance of pkg_check_modules not reporting what
	dependency is misisng

29-10-2005 Qball <Qball@qballcow.nl>
	* Moved more stuff in player.c to new signal.
	* Made dependency for fixed libmpd signals
	* Added display showing repeat/volume/random changes.. even not
	initiate by gmpc
	* code cleanups... now compiles with -ansi.
	* restoring position after hide now works again.
	* glade/image path are now retrieved using
	gmpc_get_full_{glade|image}_path. this is needed for win32 installer.


07-10-2005 Qball <Qball@qballcow.nl>
	* apply DJWLindenaar's win32 patch

06-09-2005 Qball <Qball@qballcow.nl>
	* src/playlist3.c:		Fixed single/multiple
	* src/preferences.c:		Fixed single/multiple
	* src/playlist3.c:		move.

	
05-09-2005 Qball <Qball@qballcow.nl>
	* src/playlist3.c:		Fixed scroll to bug.
	* src/playlist3.c:		added scroll to in detach playlist.
	* src/playlist3.c:		activating row in dp play's song.

04-09-2005 Qball <Qball@qballcow.nl>
	* src/playlist3.c:		Show folders in right pane view.
	* src/playlist3.c:		First attemped at detachable playlist window.
	* glade/playlist3.glade:	Added a empty window for detachable
	* playlist window.
	*** TESTING MARKUP *** playlist3.c and strfsong.c

01-09-2005 Qball <Qball@qballcow.nl>