@@ -635,7 +635,10 @@ void meta_data_add_plugin(gmpcPlugin *plug)
 		}
 	}while(changed);
 }
-
+void meta_data_cleanup()
+{
+	cfg_do_special_cleanup(cover_index);
+}
 void meta_data_check_plugin_changed()
 {
 	int old_amount= cfg_get_single_value_as_int_with_default(config, "metadata", "num_plugins", 0);
@@ -646,8 +649,7 @@ void meta_data_check_plugin_changed()
 		g_signal_connect(G_OBJECT(dialog), "response", G_CALLBACK(gtk_widget_destroy), NULL);
 		gtk_widget_show_all(GTK_WIDGET(dialog));
 	//	while(gtk_events_pending()) gtk_main_iteration();
-
-		cfg_do_special_cleanup(cover_index);
+		meta_data_cleanup();
 	}
 	if(old_amount != meta_num_plugins)
 	{
